44frontend/src/pages/Home/DiscographyPanel/DiscographyPanel.module.scss
@use "../../../utitlities/themeColors";
@import "../../../utitlities/functions";

.container {
  position: fixed;
  left: 0;
  width: 100%;
  top: 100%;
  height: 85%;
  background-color: themeColors.$default_foreground;
  transition: 0.3s;
  z-index: 1;
  padding-top: 1em;

  .top {
    width: 100%;
    display: flex;
    justify-content: flex-end;
    padding-right: 1em;
    margin-bottom: 1em;

    .close__icon {
      width: pix-rem(50);
      height: pix-rem(50);
      filter: invert(1);
      cursor: pointer;
    }
  }

  .music__grid__container {
    width: 100%;
    height: 100%;
    display: flex;
    // flex-direction: column;
    justify-content: center;

    .inner__container {
      overflow: scroll;
      max-width: 1080px;
      //   height: 100%;
      display: grid;
      grid-template-columns: repeat(5, 200px);
      grid-auto-rows: 200px;
      gap: pix-rem(2);

      .item {
        &:nth-last-child(-n + 5) {
          transition: transform 0.4s;
          &:hover {
            transform: translateY(-50%);
          }
        }
      }

      @include mediaQueryMax(1300px) {
        grid-template-columns: repeat(4, 200px);
        .item {
          &:nth-last-child(-n + 4) {
            transition: transform 0.4s;
            &:hover {
              transform: translateY(-50%);
            }
          }
        }
      }

      @include mediaQueryMax(960px) {
        grid-template-columns: repeat(3, 150px);
        grid-auto-rows: 150px;
        .item {
          &:nth-last-child(-n + 3) {
            transition: transform 0.4s;
            &:hover {
              transform: translateY(-50%);
            }
          }
        }
      }

      @include mediaQueryMax(640px) {
        grid-template-columns: repeat(3, 100px);
        grid-auto-rows: 100px;
        .item {
          &:nth-last-child(-n + 3) {
            transition: transform 0.4s;
            &:hover {
              transform: translateY(-50%);
            }
          }
        }
      }
    }
  }
}

.open {
  top: 15%;
}

